; ModuleID = '/home/carl/AnghaBench/linux/drivers/soundwire/extr_bus_type.c_sdw_bus_match.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soundwire/extr_bus_type.c_sdw_bus_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_driver = type { i32 }
%struct.sdw_slave = type { i32 }
%struct.sdw_driver = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_driver*)* @sdw_bus_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sdw_bus_match(%struct.device* %0, %struct.device_driver* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.device_driver*, align 8
  %5 = alloca %struct.sdw_slave*, align 8
  %6 = alloca %struct.sdw_driver*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.device_driver* %1, %struct.device_driver** %4, align 8
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = call %struct.sdw_slave* @dev_to_sdw_dev(%struct.device* %7)
  store %struct.sdw_slave* %8, %struct.sdw_slave** %5, align 8
  %9 = load %struct.device_driver*, %struct.device_driver** %4, align 8
  %10 = call %struct.sdw_driver* @drv_to_sdw_driver(%struct.device_driver* %9)
  store %struct.sdw_driver* %10, %struct.sdw_driver** %6, align 8
  %11 = load %struct.sdw_slave*, %struct.sdw_slave** %5, align 8
  %12 = load %struct.sdw_driver*, %struct.sdw_driver** %6, align 8
  %13 = call i32 @sdw_get_device_id(%struct.sdw_slave* %11, %struct.sdw_driver* %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local %struct.sdw_slave* @dev_to_sdw_dev(%struct.device*) #1

declare dso_local %struct.sdw_driver* @drv_to_sdw_driver(%struct.device_driver*) #1

declare dso_local i32 @sdw_get_device_id(%struct.sdw_slave*, %struct.sdw_driver*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
